--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <body>  
   
   <div id="container">
-  <iframe allowfullscreen src="o.html" style="border: 0; width: 100%; height: 100%"></iframe>
+  <iframe allowfullscreen src="o.html" style="border: 0; width="607"  height="500"></iframe>
  developer tools</div
   <div class="error"></div>
  </div>
@@ -16,4 +16,3 @@
 </html>
 
 
-width="800" height="500"
