--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <div id="container">
   <iframe allowfullscreen src="o.html" style="border: 0; width="800"  height="500"></iframe>
- developer tools</div
+ </div
   <div class="error"></div>
  </div>
 
