--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>web3dweb500</title>
+  <title>web3dweb</title>
  </head>
  <body>  
   
   <div id="container">
-  <iframe allowfullscreen src="o.html" style="border: 0; width="500"  height="500"></iframe>
+  <iframe allowfullscreen src="o.html" style="border: 0; width="700"  height="500"></iframe>
  </div
   <div class="error"></div>
  </div>
