--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <body>  
   
   <div id="container">
-  <iframe allowfullscreen src="o.html" style="border: 0; width="700"  height="500"></iframe>
+  <iframe allowfullscreen src="o_mobile.html" style="border: 0; width="700"  height="500"></iframe>
  </div
   <div class="error"></div>
  </div>
